welcome.lessons.welcome.traversal.diagonal.TraversalDiagonal.scala.error
Diagonal:36: error: value unary_! is not a member of Int
		while (!getX() == getMondeLargeur() -1) {
                       ^